--- a/src/index.pcss
+++ b/src/index.pcss
@@ -11,3 +11,18 @@
 .btn-disabled {
   @apply btn opacity-50;
 }
+
+.arrow-up {
+  @apply border-blue-600;
+  width: 0;
+  height: 0;
+  border-left: 0.625rem solid transparent;
+  border-right: 0.625rem solid transparent;
+  border-bottom: 1.25rem solid #3182ce;
+  /* border: solid;
+  border-width: 0 3px 3px 3px;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg); */
+}
